[package]
name = "site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

serde = { version = "1" }
ulid = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
object_store = { version = "0.10", optional = true, features = [ "aws" ] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "dep:leptos_axum", "dep:ulid", "dep:serde_json", "dep:object_store",
]
